# turanline

./: .env  .eslintrc.json  .gitignore  README.md  README.txt  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.oldprod.yml  docker-compose.prod.yml  docker-compose.test.yml  dump.rdb  entrypoint.sh  next.config.js  nginx.test.conf  nginx.test_server.conf  package-lock.json  package.json  private.key  products_generator.py  project_startup.sh  pyproject.toml  readme.txt  start.sh
backend/: .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.old  dev-entrypoint.sh  dump.rdb  manage.py  products_generator.py  pyproject.toml  test.py  worker-entrypoint.sh
backend/cart/: admin.py  enums.py  fields.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  views.py
backend/cart/migrations/: 0001_initial.py  0002_initial.py  0002_order_card.py  0002_order_check_file_alter_order_status.py  0003_alter_order_options_orderproduct_color_and_more.py  0003_order_customer.py  0003_orderproducts_customer.py  0004_alter_cart_order_products.py  0004_alter_order_address_alter_order_created_date_and_more.py  0004_rename_card_order_payment.py  0005_alter_order_options.py  (+18 more)
backend/clients/: __init__.py
backend/customers/: admin.py  mixins.py  models.py  permissions.py  serializers.py  views.py
backend/delivery/: admin.py  filters.py  models.py  serializers.py  views.py
backend/mssite/: asgi.py  celery.py  middleware.py  mixins.py  settings.py  storages.py  urls.py  wsgi.py
backend/nginx/: default.conf
backend/payment/: admin.py  apps.py  enums.py  mixins.py  models.py  serializers.py  views.py
backend/product_components/: admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  views.py
backend/products/: admin.py  apps.py  enums.py  fields.py  filters.py  mixins.py  models.py  permissions.py  resources.py  serializers.py  signals.py  tasks.py  validators.py  views.py
backend/providers/: admin.py  enums.py  mixins.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  views.py
backend/users/: admin.py  apps.py  enums.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  tokens.py  views.py
(+1797 files in other folders)
